# OneNoteMcp

./: .gitignore  README.md  pyproject.toml
.kiro/specs/onenote-organizer/: .config.kiro  design.md  requirements.md  tasks.md
onenote_organizer/: __init__.py  __main__.py  auth.py  graph_client.py  logger.py  models.py  server.py
tests/test_properties/: test_apply_counts.py  test_date_grouping.py  test_dry_run.py  test_encryption.py  test_error_mapping.py  test_html_strip.py  test_log_format.py  test_pagination.py  test_partial_failure.py  test_plan_schema.py  test_plan_validation.py  test_response_shape.py  test_summary.py
tests/test_unit/: test_apply_reorganization_plan.py  test_auth.py  test_get_page_content.py  test_graph_client.py  test_list_tools.py  test_logger.py
