[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onenote-organizer"
version = "0.1.0"
description = "OneNote Organizer MCP Server – manages OneNote notebooks via AI assistants"
requires-python = ">=3.11"
dependencies = [
    "msal>=1.28.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "respx>=0.21.0",
]

[project.scripts]
onenote-organizer = "onenote_organizer.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
